--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- my style -->
   <link rel="stylesheet" href="css/style.css">
   <!-- swiper CSS-->
-  <link rel="stylesheet" href="css/cdn.jsdelivr.net_npm_swiper@10.0.4_swiper-bundle.min.css">
+  <link rel="stylesheet" href="css/cdn.jsdelivr.net_npm_swiper@10.0.4_swiper-bundle.min.css" />
   <title>Portfolio</title>
 
 </head>
@@ -97,55 +97,73 @@
   <!-- skills section -->
   <section>
     <div class="wrapper">
-      <div id="skill" class="skill">
+      <div class="skill" id="skill">
         <h2>My<span> Skills</span></h2>
-        <div class="row swiper skill-swiper">
-          <div class="skill-list swiper-wrapper">
-            <div class="card swiper-slide">
-              <img src="assets/images/html-5.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/css.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/js.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/html-5.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/css.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/js.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/html-5.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/css.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/js.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/html-5.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/css.png" alt="html">
-            </div>
-            <div class="card swiper-slide">
-              <img src="assets/images/js.png" alt="html">
+        <div class="skill-body">
+          <div class="skill-container swiper">
+            <div class="skill-content">
+              <div class="skill-wrapper swiper-wrapper">
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/html.png" alt="html">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/css.png" alt="css">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/js.png" alt="js">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/php.png" alt="php">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/react.png" alt="react">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/mysql.png" alt="mysql">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/iot.png" alt="html" class="iot">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/raspberryPi.png" alt="raspberry-pi">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/laravel_logo.png" alt="laravel" class="iot">
+                  </div>
+                </div>
+                <div class="card swiper-slide">
+                  <div class="image">
+                    <img src="assets/images/bootstrap.png" alt="bootstrap">
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
             </div>
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
         </div>
       </div>
     </div>
-    </div>
   </section>
+       
   <!-- skills section end -->
 
   <!-- project section start -->
@@ -159,11 +177,6 @@
               <h3>React.js - SPA</h3>
               <img src="assets/images/search-movie1.png" alt="mstore">
               <p>Maolaart Movie List</p>
-            </div>
-            <div class="card">
-              <h3>Ecommerce</h3>
-              <img src="assets/images/mstore-ecommerce1.png" alt="mstore">
-              <p>MStore Music Ecommerce</p>
             </div>
             <div class="card">
               <h3>Ecommerce</h3>
@@ -215,16 +228,16 @@
     </div>
   </section>
   <!-- contact section end -->
-  
+
   <!-- script swiper -->
   <script src="js/cdn.jsdelivr.net_npm_swiper@10.0.4_swiper-bundle.min.js"></script>
 
   <!-- script jquery -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  
+
   <!-- main script -->
-    <script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
