--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
               In my future efforts, I am excited to leverage my knowledge and skills to contribute to the ever-evolving
               field of technology
             </p>
-            <div class="desc-btn">
+            <!-- <div class="desc-btn">
               <a href="assets/files/new_cv.pdf" download onclick="handleDownloadClick(event)"> > Resume < </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -178,14 +178,18 @@
           <h2><span>My</span> Project</h2>
           <div class="row">
             <div class="card">
-              <h3>React.js - SPA</h3>
-              <img src="assets/images/search-movie1.png" alt="mstore">
-              <p>Maolaart Movie List</p>
+              <a href="https://maolaart.github.io/react.js-by-maolaart" target="_blank">
+                <h3>React.js - SPA</h3>
+                <img src="assets/images/search-movie1.png" alt="mstore">
+                <p>Maolaart Movie List</p>
+              </a>
             </div>
             <div class="card">
-              <h3>Ecommerce</h3>
-              <img src="assets/images/mstore-ecommerce1.png" alt="mstore">
-              <p>MStore Music Ecommerce</p>
+              <a href="http://mstore01.000webhostapp.com/" target="_blank">
+                <h3>Ecommerce</h3>
+                <img src="assets/images/mstore-ecommerce1.png" alt="mstore">
+                <p>MStore Music Ecommerce</p>
+              </a>
             </div>
           </div>
         </div>
@@ -214,25 +218,34 @@
               </form>
             </div>
             <div class="contact-info">
-              <h3 class="title-contact">Socials</h3>
-              <div class="contact-info-wrapper">
-                <div class="list-contact">
-                  <div class="icon">
-
-                </div>
-                <div class="list-contact">
-                  <div class="icon">
-                    <i class="fa-brands fa-instagram"></i>
+              <div class="info-wrapper">
+                <h3 class="title-contact">Contact</h3>
+                <p>andreamaola35@gmail.com</p>
+              </div>
+              <div class="info-wrapper">
+                <h3 class="title-contact">Based in</h3>
+                <p>Kota Bekasi, Jawa barat, Indonesia</p>
+              </div>
+              <div class="info-wrapper">
+                <h3 class="title-contact">Social Media</h3>
+                <div class="social-list">
+                  <div class="list-contact">
+                    <div class="icon">
+                      <a href="https://www.instagram.com/andreamaulanaa_/?hl=en" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                      </a>
+                    </div>
                   </div>
-                </div>
-                <div class="list-contact">
-                  <div class="icon">
-                    <i class="fa-brands fa-linkedin"></i>
+                  <div class="list-contact">
+                    <div class="icon">
+                      <a href="https://www.linkedin.com/in/andreamaulanaa/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
