--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <input type="email" placeholder="" id="email">
                 <label for="message">Message</label>
                 <textarea name="message" id="message" placeholder=""></textarea>
-                <button type="submit" id="submit-message" value="send message">Send</button>
+                <a href="#contact" class="btn-send">Send</a>
               </form>
             </div>
             <div class="contact-info">
