--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <!-- swiper CSS-->
   <link rel="stylesheet" href="css/cdn.jsdelivr.net_npm_swiper@10.0.4_swiper-bundle.min.css" />
   <title>Portfolio</title>
+  <!-- semantic Ui -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
   <!-- my style -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -207,14 +209,15 @@
         <div class="contact-container">
           <div class="contact-content">
             <div class="contact-wrapper">
-              <form>
+              <form name="maolaart-contact-form">
                 <label for="name">Full Name</label>
-                <input type="text" placeholder="" id="name">
+                <input name="name" type="text" placeholder="" id="name" required>
                 <label for="email">E-mail</label>
-                <input type="email" placeholder="" id="email">
+                <input name="email" type="email" placeholder="" id="email" required>
                 <label for="message">Message</label>
-                <textarea name="message" id="message" placeholder=""></textarea>
-                <a href="#contact" class="btn-send">Send</a>
+                <textarea name="message" id="message" placeholder="" required></textarea>
+                <button class="ui loading button btn-loading" id="btnLoading">Loading</button>
+                <button class="btn-send" type="submit" id="btnSend">Send</button>
               </form>
             </div>
             <div class="contact-info">
@@ -264,6 +267,9 @@
 
   <!-- script swiper -->
   <script src="js/cdn.jsdelivr.net_npm_swiper@10.0.4_swiper-bundle.min.js"></script>
+
+  <!-- semantic ui
+  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script> -->
 
   <!-- script jquery -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
